<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/turn_on_keyboard_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_keyboard" />

            <Button
                android:id="@+id/select_keyboard_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_keyboard" />

            <Button
                android:id="@+id/setting_layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_layout" />

            <Button
                android:id="@+id/learning_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learning" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

            <Button
                android:id="@+id/privacy_policy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>